# tailclose-screener

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.toml
apps/desktop/: README.md  pyproject.toml
apps/desktop/packaging/: tailclose-screener.spec
apps/desktop/tailclose_desktop/: backtest.py  main.py  models.py  storage.py  strategy.py
apps/desktop/tailclose_desktop/notify/: __init__.py  feishu.py
apps/desktop/tailclose_desktop/providers/: __init__.py  akshare_provider.py  baostock_provider.py  base.py  sample.py  tushare_provider.py
apps/desktop/tailclose_desktop/ui/: __init__.py  main_window.py  settings_dialog.py
apps/desktop/tests/: test_backtest_storage.py  test_feishu.py  test_packaging.py  test_providers.py  test_smoke.py  test_strategy.py  test_ui_smoke.py
docs/superpowers/plans/: 2026-06-21-tailclose-cloudflare-pwa.md  2026-06-26-tailclose-desktop-exe.md
docs/superpowers/specs/: 2026-06-20-tail-close-ios-pwa-design.md  2026-06-26-tailclose-desktop-exe-design.md
functions/_shared/: http.ts  provider.ts  screenService.ts
functions/api/: backtest.ts  screen.test.ts  screen.ts  strategies.ts
public/: manifest.webmanifest
src/: App.test.tsx  App.tsx  styles.css
src/api/: client.ts
src/data/: sampleMarket.ts
src/domain/: backtest.test.ts  backtest.ts  strategies.ts  strategyEngine.test.ts  strategyEngine.ts  types.ts
tests/functions/: screen.test.ts
