[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tailclose-desktop"
version = "0.1.0"
description = "Tailclose desktop application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "pandas>=2.2",
    "akshare>=1.14",
    "baostock>=0.8.9",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pyinstaller>=6.8",
]

[project.scripts]
tailclose-desktop = "tailclose_desktop.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
